parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> INICIO PUNTO list_sentences FIN PUNTO
Rule 2     list_sentences -> <empty>
Rule 3     list_sentences -> list_sentences sentence
Rule 4     list_sentences -> sentence
Rule 5     sentence -> datatype list_id PUNTO
Rule 6     sentence -> control_statement PUNTO
Rule 7     sentence -> assignment_statement PUNTO
Rule 8     sentence -> system_function_call_statement PUNTO
Rule 9     list_id -> list_id COMA IDENTIF
Rule 10    list_id -> IDENTIF
Rule 11    control_statement -> if_statement
Rule 12    control_statement -> while_statement
Rule 13    if_statement -> CUANDO expression ENTONCES list_sentences LISTO
Rule 14    if_statement -> CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
Rule 15    while_statement -> MIENTRAS expression ENTONCES list_sentences LISTO
Rule 16    assignment_statement -> IDENTIF IGUAL expression
Rule 17    assignment_statement -> IDENTIF IGUAL special_expression
Rule 18    assignment_statement -> IDENTIF IGUAL CADENA_VALOR
Rule 19    system_function_call_statement -> IMPRIMIR PARIZ list_arg PARDE
Rule 20    system_function_call_statement -> LEER PARIZ list_id PARDE
Rule 21    list_arg -> list_arg COMA arg
Rule 22    list_arg -> arg
Rule 23    arg -> IDENTIF
Rule 24    arg -> expression
Rule 25    arg -> CADENA_VALOR
Rule 26    operator -> arithmetic_operator
Rule 27    operator -> logic_operator
Rule 28    operator -> relational_operator
Rule 29    operator -> equality_operator
Rule 30    arithmetic_operator -> MAS
Rule 31    arithmetic_operator -> MENOS
Rule 32    arithmetic_operator -> POR
Rule 33    arithmetic_operator -> ENTRE
Rule 34    logic_operator -> O
Rule 35    logic_operator -> Y
Rule 36    logic_operator -> NO
Rule 37    relational_operator -> MAYORQUE
Rule 38    relational_operator -> MENORQUE
Rule 39    relational_operator -> MAYOR_IGUAL
Rule 40    relational_operator -> MENOR_IGUAL
Rule 41    equality_operator -> EQUIVALE
Rule 42    equality_operator -> DIFIERE
Rule 43    datatype -> ENTERO
Rule 44    datatype -> CADENA
Rule 45    datatype -> REAL
Rule 46    datatype -> BOOLEANO
Rule 47    expression -> expression operator expression
Rule 48    expression -> PARIZ expression PARDE
Rule 49    expression -> NO expression
Rule 50    expression -> ABRE_RPN special_expression CIERRA_RPN
Rule 51    expression -> IDENTIF
Rule 52    expression -> NUMERO
Rule 53    expression -> boolean_value
Rule 54    boolean_value -> CIERTO
Rule 55    boolean_value -> FALSO
Rule 56    expression -> MENOS expression
Rule 57    special_expression -> IDENTIF IDENTIF operator
Rule 58    special_expression -> NUMERO NUMERO operator
Rule 59    special_expression -> NUMERO IDENTIF operator
Rule 60    special_expression -> IDENTIF NUMERO operator

Terminals, with rules where they appear

ABRE_RPN             : 50
BOOLEANO             : 46
CADENA               : 44
CADENA_VALOR         : 18 25
CIERRA_RPN           : 50
CIERTO               : 54
COMA                 : 9 21
CUANDO               : 13 14
DIFIERE              : 42
ENTERO               : 43
ENTONCES             : 13 14 15
ENTRE                : 33
EQUIVALE             : 41
FALSO                : 55
FIN                  : 1
IDENTIF              : 9 10 16 17 18 23 51 57 57 59 60
IGUAL                : 16 17 18
IMPRIMIR             : 19
INICIO               : 1
LEER                 : 20
LISTO                : 13 14 15
MAS                  : 30
MAYORQUE             : 37
MAYOR_IGUAL          : 39
MENORQUE             : 38
MENOR_IGUAL          : 40
MENOS                : 31 56
MIENTRAS             : 15
NO                   : 36 49
NUMERO               : 52 58 58 59 60
O                    : 34
PARDE                : 19 20 48
PARIZ                : 19 20 48
POR                  : 32
PUNTO                : 1 1 5 6 7 8
REAL                 : 45
SINO                 : 14
Y                    : 35
error                : 

Nonterminals, with rules where they appear

arg                  : 21 22
arithmetic_operator  : 26
assignment_statement : 7
boolean_value        : 53
control_statement    : 6
datatype             : 5
equality_operator    : 29
expression           : 13 14 15 16 24 47 47 48 49 56
if_statement         : 11
list_arg             : 19 21
list_id              : 5 9 20
list_sentences       : 1 3 13 14 14 15
logic_operator       : 27
operator             : 47 57 58 59 60
relational_operator  : 28
sentence             : 3 4
special_expression   : 17 50
start                : 0
system_function_call_statement : 8
while_statement      : 12

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . INICIO PUNTO list_sentences FIN PUNTO

    INICIO          shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> INICIO . PUNTO list_sentences FIN PUNTO

    PUNTO           shift and go to state 3


state 3

    (1) start -> INICIO PUNTO . list_sentences FIN PUNTO
    (2) list_sentences -> .
    (3) list_sentences -> . list_sentences sentence
    (4) list_sentences -> . sentence
    (5) sentence -> . datatype list_id PUNTO
    (6) sentence -> . control_statement PUNTO
    (7) sentence -> . assignment_statement PUNTO
    (8) sentence -> . system_function_call_statement PUNTO
    (43) datatype -> . ENTERO
    (44) datatype -> . CADENA
    (45) datatype -> . REAL
    (46) datatype -> . BOOLEANO
    (11) control_statement -> . if_statement
    (12) control_statement -> . while_statement
    (16) assignment_statement -> . IDENTIF IGUAL expression
    (17) assignment_statement -> . IDENTIF IGUAL special_expression
    (18) assignment_statement -> . IDENTIF IGUAL CADENA_VALOR
    (19) system_function_call_statement -> . IMPRIMIR PARIZ list_arg PARDE
    (20) system_function_call_statement -> . LEER PARIZ list_id PARDE
    (13) if_statement -> . CUANDO expression ENTONCES list_sentences LISTO
    (14) if_statement -> . CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
    (15) while_statement -> . MIENTRAS expression ENTONCES list_sentences LISTO

  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for REAL resolved as shift
  ! shift/reduce conflict for BOOLEANO resolved as shift
  ! shift/reduce conflict for IDENTIF resolved as shift
  ! shift/reduce conflict for IMPRIMIR resolved as shift
  ! shift/reduce conflict for LEER resolved as shift
  ! shift/reduce conflict for CUANDO resolved as shift
  ! shift/reduce conflict for MIENTRAS resolved as shift
    FIN             reduce using rule 2 (list_sentences -> .)
    ENTERO          shift and go to state 10
    CADENA          shift and go to state 11
    REAL            shift and go to state 12
    BOOLEANO        shift and go to state 13
    IDENTIF         shift and go to state 16
    IMPRIMIR        shift and go to state 17
    LEER            shift and go to state 18
    CUANDO          shift and go to state 19
    MIENTRAS        shift and go to state 20

  ! ENTERO          [ reduce using rule 2 (list_sentences -> .) ]
  ! CADENA          [ reduce using rule 2 (list_sentences -> .) ]
  ! REAL            [ reduce using rule 2 (list_sentences -> .) ]
  ! BOOLEANO        [ reduce using rule 2 (list_sentences -> .) ]
  ! IDENTIF         [ reduce using rule 2 (list_sentences -> .) ]
  ! IMPRIMIR        [ reduce using rule 2 (list_sentences -> .) ]
  ! LEER            [ reduce using rule 2 (list_sentences -> .) ]
  ! CUANDO          [ reduce using rule 2 (list_sentences -> .) ]
  ! MIENTRAS        [ reduce using rule 2 (list_sentences -> .) ]

    list_sentences                 shift and go to state 4
    sentence                       shift and go to state 5
    datatype                       shift and go to state 6
    control_statement              shift and go to state 7
    assignment_statement           shift and go to state 8
    system_function_call_statement shift and go to state 9
    if_statement                   shift and go to state 14
    while_statement                shift and go to state 15

state 4

    (1) start -> INICIO PUNTO list_sentences . FIN PUNTO
    (3) list_sentences -> list_sentences . sentence
    (5) sentence -> . datatype list_id PUNTO
    (6) sentence -> . control_statement PUNTO
    (7) sentence -> . assignment_statement PUNTO
    (8) sentence -> . system_function_call_statement PUNTO
    (43) datatype -> . ENTERO
    (44) datatype -> . CADENA
    (45) datatype -> . REAL
    (46) datatype -> . BOOLEANO
    (11) control_statement -> . if_statement
    (12) control_statement -> . while_statement
    (16) assignment_statement -> . IDENTIF IGUAL expression
    (17) assignment_statement -> . IDENTIF IGUAL special_expression
    (18) assignment_statement -> . IDENTIF IGUAL CADENA_VALOR
    (19) system_function_call_statement -> . IMPRIMIR PARIZ list_arg PARDE
    (20) system_function_call_statement -> . LEER PARIZ list_id PARDE
    (13) if_statement -> . CUANDO expression ENTONCES list_sentences LISTO
    (14) if_statement -> . CUANDO expression ENTONCES list_sentences SINO list_sentences LISTO
    (15) while_statement -> . MIENTRAS expression ENTONCES list_sentences LISTO

    FIN             shift and go to state 21
    ENTERO          shift and go to state 10
    CADENA          shift and go to state 11
    REAL            shift and go to state 12
    BOOLEANO        shift and go to state 13
    IDENTIF         shift and go to state 16
    IMPRIMIR        shift and go to state 17
    LEER            shift and go to state 18
    CUANDO          shift and go to state 19
    MIENTRAS        shift and go to state 20

    sentence                       shift and go to state 22
    datatype                       shift and go to state 6
    control_statement              shift and go to state 7
    assignment_statement           shift and go to state 8
    system_function_call_statement shift and go to state 9
    if_statement                   shift and go to state 14
    while_statement                shift and go to state 15

state 5

    (4) list_sentences -> sentence .

    FIN             reduce using rule 4 (list_sentences -> sentence .)
    ENTERO          reduce using rule 4 (list_sentences -> sentence .)
    CADENA          reduce using rule 4 (list_sentences -> sentence .)
    REAL            reduce using rule 4 (list_sentences -> sentence .)
    BOOLEANO        reduce using rule 4 (list_sentences -> sentence .)
    IDENTIF         reduce using rule 4 (list_sentences -> sentence .)
    IMPRIMIR        reduce using rule 4 (list_sentences -> sentence .)
    LEER            reduce using rule 4 (list_sentences -> sentence .)
    CUANDO          reduce using rule 4 (list_sentences -> sentence .)
    MIENTRAS        reduce using rule 4 (list_sentences -> sentence .)
    LISTO           reduce using rule 4 (list_sentences -> sentence .)
    SINO            reduce using rule 4 (list_sentences -> sentence .)


state 6

    (5) sentence -> datatype . list_id PUNTO
    (9) list_id -> . list_id COMA IDENTIF
    (10) list_id -> . IDENTIF

    IDENTIF         shift and go to state 24

    list_id                        shift and go to state 23

state 7

    (6) sentence -> control_statement . PUNTO

    PUNTO           shift and go to state 25


state 8

    (7) sentence -> assignment_statement . PUNTO

    PUNTO           shift and go to state 26


state 9

    (8) sentence -> system_function_call_statement . PUNTO

    PUNTO           shift and go to state 27


state 10

    (43) datatype -> ENTERO .

    IDENTIF         reduce using rule 43 (datatype -> ENTERO .)


state 11

    (44) datatype -> CADENA .

    IDENTIF         reduce using rule 44 (datatype -> CADENA .)


state 12

    (45) datatype -> REAL .

    IDENTIF         reduce using rule 45 (datatype -> REAL .)


state 13

    (46) datatype -> BOOLEANO .

    IDENTIF         reduce using rule 46 (datatype -> BOOLEANO .)


state 14

    (11) control_statement -> if_statement .

    PUNTO           reduce using rule 11 (control_statement -> if_statement .)


state 15

    (12) control_statement -> while_statement .

    PUNTO           reduce using rule 12 (control_statement -> while_statement .)


state 16

    (16) assignment_statement -> IDENTIF . IGUAL expression
    (17) assignment_statement -> IDENTIF . IGUAL special_expression
    (18) assignment_statement -> IDENTIF . IGUAL CADENA_VALOR

    IGUAL           shift and go to state 28


state 17

    (19) system_function_call_statement -> IMPRIMIR . PARIZ list_arg PARDE

    PARIZ           shift and go to state 29


state 18

    (20) system_function_call_statement -> LEER . PARIZ list_id PARDE

    PARIZ           shift and go to state 30


state 19

    (13) if_statement -> CUANDO . expression ENTONCES list_sentences LISTO
    (14) if_statement -> CUANDO . expression ENTONCES list_sentences SINO list_sentences LISTO
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 35
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 31
    boolean_value                  shift and go to state 37

state 20

    (15) while_statement -> MIENTRAS . expression ENTONCES list_sentences LISTO
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 35
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 41
    boolean_value                  shift and go to state 37

state 21

    (1) start -> INICIO PUNTO list_sentences FIN . PUNTO

    PUNTO           shift and go to state 42


state 22

    (3) list_sentences -> list_sentences sentence .

    FIN             reduce using rule 3 (list_sentences -> list_sentences sentence .)
    ENTERO          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    CADENA          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    REAL            reduce using rule 3 (list_sentences -> list_sentences sentence .)
    BOOLEANO        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    IDENTIF         reduce using rule 3 (list_sentences -> list_sentences sentence .)
    IMPRIMIR        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    LEER            reduce using rule 3 (list_sentences -> list_sentences sentence .)
    CUANDO          reduce using rule 3 (list_sentences -> list_sentences sentence .)
    MIENTRAS        reduce using rule 3 (list_sentences -> list_sentences sentence .)
    LISTO           reduce using rule 3 (list_sentences -> list_sentences sentence .)
    SINO            reduce using rule 3 (list_sentences -> list_sentences sentence .)


state 23

    (5) sentence -> datatype list_id . PUNTO
    (9) list_id -> list_id . COMA IDENTIF

    PUNTO           shift and go to state 43
    COMA            shift and go to state 44


state 24

    (10) list_id -> IDENTIF .

    PUNTO           reduce using rule 10 (list_id -> IDENTIF .)
    COMA            reduce using rule 10 (list_id -> IDENTIF .)
    PARDE           reduce using rule 10 (list_id -> IDENTIF .)


state 25

    (6) sentence -> control_statement PUNTO .

    FIN             reduce using rule 6 (sentence -> control_statement PUNTO .)
    ENTERO          reduce using rule 6 (sentence -> control_statement PUNTO .)
    CADENA          reduce using rule 6 (sentence -> control_statement PUNTO .)
    REAL            reduce using rule 6 (sentence -> control_statement PUNTO .)
    BOOLEANO        reduce using rule 6 (sentence -> control_statement PUNTO .)
    IDENTIF         reduce using rule 6 (sentence -> control_statement PUNTO .)
    IMPRIMIR        reduce using rule 6 (sentence -> control_statement PUNTO .)
    LEER            reduce using rule 6 (sentence -> control_statement PUNTO .)
    CUANDO          reduce using rule 6 (sentence -> control_statement PUNTO .)
    MIENTRAS        reduce using rule 6 (sentence -> control_statement PUNTO .)
    LISTO           reduce using rule 6 (sentence -> control_statement PUNTO .)
    SINO            reduce using rule 6 (sentence -> control_statement PUNTO .)


state 26

    (7) sentence -> assignment_statement PUNTO .

    FIN             reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    ENTERO          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    CADENA          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    REAL            reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    BOOLEANO        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    IDENTIF         reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    IMPRIMIR        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    LEER            reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    CUANDO          reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    MIENTRAS        reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    LISTO           reduce using rule 7 (sentence -> assignment_statement PUNTO .)
    SINO            reduce using rule 7 (sentence -> assignment_statement PUNTO .)


state 27

    (8) sentence -> system_function_call_statement PUNTO .

    FIN             reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    ENTERO          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    CADENA          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    REAL            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    BOOLEANO        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    IDENTIF         reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    IMPRIMIR        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    LEER            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    CUANDO          reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    MIENTRAS        reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    LISTO           reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)
    SINO            reduce using rule 8 (sentence -> system_function_call_statement PUNTO .)


state 28

    (16) assignment_statement -> IDENTIF IGUAL . expression
    (17) assignment_statement -> IDENTIF IGUAL . special_expression
    (18) assignment_statement -> IDENTIF IGUAL . CADENA_VALOR
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (57) special_expression -> . IDENTIF IDENTIF operator
    (58) special_expression -> . NUMERO NUMERO operator
    (59) special_expression -> . NUMERO IDENTIF operator
    (60) special_expression -> . IDENTIF NUMERO operator
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    CADENA_VALOR    shift and go to state 48
    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 45
    NUMERO          shift and go to state 49
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 46
    special_expression             shift and go to state 47
    boolean_value                  shift and go to state 37

state 29

    (19) system_function_call_statement -> IMPRIMIR PARIZ . list_arg PARDE
    (21) list_arg -> . list_arg COMA arg
    (22) list_arg -> . arg
    (23) arg -> . IDENTIF
    (24) arg -> . expression
    (25) arg -> . CADENA_VALOR
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    IDENTIF         shift and go to state 52
    CADENA_VALOR    shift and go to state 54
    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    list_arg                       shift and go to state 50
    arg                            shift and go to state 51
    expression                     shift and go to state 53
    boolean_value                  shift and go to state 37

state 30

    (20) system_function_call_statement -> LEER PARIZ . list_id PARDE
    (9) list_id -> . list_id COMA IDENTIF
    (10) list_id -> . IDENTIF

    IDENTIF         shift and go to state 24

    list_id                        shift and go to state 55

state 31

    (13) if_statement -> CUANDO expression . ENTONCES list_sentences LISTO
    (14) if_statement -> CUANDO expression . ENTONCES list_sentences SINO list_sentences LISTO
    (47) expression -> expression . operator expression
    (26) operator -> . arithmetic_operator
    (27) operator -> . logic_operator
    (28) operator -> . relational_operator
    (29) operator -> . equality_operator
    (30) arithmetic_operator -> . MAS
    (31) arithmetic_operator -> . MENOS
    (32) arithmetic_operator -> . POR
    (33) arithmetic_operator -> . ENTRE
    (34) logic_operator -> . O
    (35) logic_operator -> . Y
    (36) logic_operator -> . NO
    (37) relational_operator -> . MAYORQUE
    (38) relational_operator -> . MENORQUE
    (39) relational_operator -> . MAYOR_IGUAL
    (40) relational_operator -> . MENOR_IGUAL
    (41) equality_operator -> . EQUIVALE
    (42) equality_operator -> . DIFIERE

    ENTONCES        shift and go to state 56
    MAS             shift and go to state 62
    MENOS           shift and go to state 63
    POR             shift and go to state 64
    ENTRE           shift and go to state 65
    O               shift and go to state 66
    Y               shift and go to state 67
    NO              shift and go to state 68
    MAYORQUE        shift and go to state 69
    MENORQUE        shift and go to state 70
    MAYOR_IGUAL     shift and go to state 71
    MENOR_IGUAL     shift and go to state 72
    EQUIVALE        shift and go to state 73
    DIFIERE         shift and go to state 74

    operator                       shift and go to state 57
    arithmetic_operator            shift and go to state 58
    logic_operator                 shift and go to state 59
    relational_operator            shift and go to state 60
    equality_operator              shift and go to state 61

state 32

    (48) expression -> PARIZ . expression PARDE
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 35
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 75
    boolean_value                  shift and go to state 37

state 33

    (49) expression -> NO . expression
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 35
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 76
    boolean_value                  shift and go to state 37

state 34

    (50) expression -> ABRE_RPN . special_expression CIERRA_RPN
    (57) special_expression -> . IDENTIF IDENTIF operator
    (58) special_expression -> . NUMERO NUMERO operator
    (59) special_expression -> . NUMERO IDENTIF operator
    (60) special_expression -> . IDENTIF NUMERO operator

    IDENTIF         shift and go to state 78
    NUMERO          shift and go to state 79

    special_expression             shift and go to state 77

state 35

    (51) expression -> IDENTIF .

    ENTONCES        reduce using rule 51 (expression -> IDENTIF .)
    MAS             reduce using rule 51 (expression -> IDENTIF .)
    MENOS           reduce using rule 51 (expression -> IDENTIF .)
    POR             reduce using rule 51 (expression -> IDENTIF .)
    ENTRE           reduce using rule 51 (expression -> IDENTIF .)
    O               reduce using rule 51 (expression -> IDENTIF .)
    Y               reduce using rule 51 (expression -> IDENTIF .)
    NO              reduce using rule 51 (expression -> IDENTIF .)
    MAYORQUE        reduce using rule 51 (expression -> IDENTIF .)
    MENORQUE        reduce using rule 51 (expression -> IDENTIF .)
    MAYOR_IGUAL     reduce using rule 51 (expression -> IDENTIF .)
    MENOR_IGUAL     reduce using rule 51 (expression -> IDENTIF .)
    EQUIVALE        reduce using rule 51 (expression -> IDENTIF .)
    DIFIERE         reduce using rule 51 (expression -> IDENTIF .)
    PARDE           reduce using rule 51 (expression -> IDENTIF .)
    PUNTO           reduce using rule 51 (expression -> IDENTIF .)
    COMA            reduce using rule 51 (expression -> IDENTIF .)


state 36

    (52) expression -> NUMERO .

    ENTONCES        reduce using rule 52 (expression -> NUMERO .)
    MAS             reduce using rule 52 (expression -> NUMERO .)
    MENOS           reduce using rule 52 (expression -> NUMERO .)
    POR             reduce using rule 52 (expression -> NUMERO .)
    ENTRE           reduce using rule 52 (expression -> NUMERO .)
    O               reduce using rule 52 (expression -> NUMERO .)
    Y               reduce using rule 52 (expression -> NUMERO .)
    NO              reduce using rule 52 (expression -> NUMERO .)
    MAYORQUE        reduce using rule 52 (expression -> NUMERO .)
    MENORQUE        reduce using rule 52 (expression -> NUMERO .)
    MAYOR_IGUAL     reduce using rule 52 (expression -> NUMERO .)
    MENOR_IGUAL     reduce using rule 52 (expression -> NUMERO .)
    EQUIVALE        reduce using rule 52 (expression -> NUMERO .)
    DIFIERE         reduce using rule 52 (expression -> NUMERO .)
    PARDE           reduce using rule 52 (expression -> NUMERO .)
    COMA            reduce using rule 52 (expression -> NUMERO .)
    PUNTO           reduce using rule 52 (expression -> NUMERO .)


state 37

    (53) expression -> boolean_value .

    ENTONCES        reduce using rule 53 (expression -> boolean_value .)
    MAS             reduce using rule 53 (expression -> boolean_value .)
    MENOS           reduce using rule 53 (expression -> boolean_value .)
    POR             reduce using rule 53 (expression -> boolean_value .)
    ENTRE           reduce using rule 53 (expression -> boolean_value .)
    O               reduce using rule 53 (expression -> boolean_value .)
    Y               reduce using rule 53 (expression -> boolean_value .)
    NO              reduce using rule 53 (expression -> boolean_value .)
    MAYORQUE        reduce using rule 53 (expression -> boolean_value .)
    MENORQUE        reduce using rule 53 (expression -> boolean_value .)
    MAYOR_IGUAL     reduce using rule 53 (expression -> boolean_value .)
    MENOR_IGUAL     reduce using rule 53 (expression -> boolean_value .)
    EQUIVALE        reduce using rule 53 (expression -> boolean_value .)
    DIFIERE         reduce using rule 53 (expression -> boolean_value .)
    PUNTO           reduce using rule 53 (expression -> boolean_value .)
    PARDE           reduce using rule 53 (expression -> boolean_value .)
    COMA            reduce using rule 53 (expression -> boolean_value .)


state 38

    (56) expression -> MENOS . expression
    (47) expression -> . expression operator expression
    (48) expression -> . PARIZ expression PARDE
    (49) expression -> . NO expression
    (50) expression -> . ABRE_RPN special_expression CIERRA_RPN
    (51) expression -> . IDENTIF
    (52) expression -> . NUMERO
    (53) expression -> . boolean_value
    (56) expression -> . MENOS expression
    (54) boolean_value -> . CIERTO
    (55) boolean_value -> . FALSO

    PARIZ           shift and go to state 32
    NO              shift and go to state 33
    ABRE_RPN        shift and go to state 34
    IDENTIF         shift and go to state 35
    NUMERO          shift and go to state 36
    MENOS           shift and go to state 38
    CIERTO          shift and go to state 39
    FALSO           shift and go to state 40

    expression                     shift and go to state 80
    boolean_value                  shift and go to state 37

state 39

    (54) boolean_value -> CIERTO .

    ENTONCES        reduce using rule 54 (boolean_value -> CIERTO .)
    MAS             reduce using rule 54 (boolean_value -> CIERTO .)
    MENOS           reduce using rule 54 (boolean_value -> CIERTO .)
    POR             reduce using rule 54 (boolean_value -> CIERTO .)
    ENTRE           reduce using rule 54 (boolean_value -> CIERTO .)
    O               reduce using rule 54 (boolean_value -> CIERTO .)
    Y               reduce using rule 54 (boolean_value -> CIERTO .)
    NO              reduce using rule 54 (boolean_value -> CIERTO .)
    MAYORQUE        reduce using rule 54 (boolean_value -> CIERTO .)
    MENORQUE        reduce using rule 54 (boolean_value -> CIERTO .)
    MAYOR_IGUAL     reduce using rule 54 (boolean_value -> CIERTO .)
    MENOR_IGUAL     reduce using rule 54 (boolean_value -> CIERTO .)
    EQUIVALE        reduce using rule 54 (boolean_value -> CIERTO .)
    DIFIERE         reduce using rule 54 (boolean_value -> CIERTO .)
    PUNTO           reduce using rule 54 (boolean_value -> CIERTO .)
    PARDE           reduce using rule 54 (boolean_value -> CIERTO .)
    COMA            reduce using rule 54 (boolean_value -> CIERTO .)


state 40

    (55) boolean_value -> FALSO .

    ENTONCES        reduce using rule 55 (boolean_value -> FALSO .)
    MAS             reduce using rule 55 (boolean_value -> FALSO .)
    MENOS           reduce using rule 55 (boolean_value -> FALSO .)
    POR             reduce using rule 55 (boolean_value -> FALSO .)
    ENTRE           reduce using rule 55 (boolean_value -> FALSO .)
    O               reduce using rule 55 (boolean_value -> FALSO .)
    Y               reduce using rule 55 (boolean_value -> FALSO .)
    NO              reduce using rule 55 (boolean_value -> FALSO .)
    MAYORQUE        reduce using rule 55 (boolean_value -> FALSO .)
    MENORQUE        reduce using rule 55 (boolean_value -> FALSO .)
    MAYOR_IGUAL     reduce using rule 55 (boolean_value -> FALSO .)
    MENOR_IGUAL     reduce using rule 55 (boolean_value -> FALSO .)
    EQUIVALE        reduce using rule 55 (boolean_value -> FALSO .)
    DIFIERE         reduce using rule 55 (boolean_value -> FALSO .)
    PUNTO           reduce using rule 55 (boolean_value -> FALSO .)
    PARDE           reduce using rule 55 (boolean_value -> FALSO .)
    COMA            reduce using rule 55 (boolean_value -> FALSO .)


state 41

    (15) while_statement -> MIENTRAS expression . ENTONCES list_sentences LISTO
    (47) expression -> expression . operator expression
    (26) operator -> . arithmetic_operator
    (27) operator -> . logic_operator
    (28) operator -> . relational_operator
    (29) operator -> . equality_operator
    (30) arithmetic_operator -> . MAS
    (31) arithmetic_operator -> . MENOS
    (32) arithmetic_operator -> . POR
    (33) arithmetic_operator -> . ENTRE
    (34) logic_operator -> . O
    (35) logic_operator -> . Y
    (36) logic_operator -> . NO
    (37) relational_operator -> . MAYORQUE
    (38) relational_operator -> . MENORQUE
    (39) relational_operator -> . MAYOR_IGUAL
    (40) relational_operator -> . MENOR_IGUAL
    (41) equality_operator -> . EQUIVALE
    (42) equality_operator -> . DIFIERE
